--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     "php": ">=5.4.0"
   },
   "autoload": {
-    "psr-4": {
-            "Scriptburn\\": "src/"
+     
+    "psr-0": {
+      "Scriptburn\\Setting\\": "src/"
     }
   }
 }
