--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "php": ">=5.4.0"
   },
   "autoload": {
-     
+     "classmap": [
+      "src/Scriptburn/Setting"
+    ],
     "psr-0": {
       "Scriptburn\\Setting\\": "src/"
     }
